<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teatro</string>
    <string name="texto_prueba">Conexion con controlador</string>
    <string name="action_settings">Settings</string>
    <string name="buttonConnect">Conectar BlueTooth</string>
    <string name="buttonIngresar">Ingresar</string>
    <string name="fieldMsj" />
    <string name="title_activity_pantalla">PantallaA</string>
    <string name="titulo_PantallaA">Estas en pantallaA</string>
    <string name="buttonVolver">Volver</string>
    <string name="buttonMotor">Crear CMD Motor</string>
    <string name="buttonLuz">Crear CMD Luz</string>

    <!-- AJUSTES DE MOTOR -->
    <string name="title_activity_pantalla_motor">PantallaMotor</string>
    <string name="textnmotor">Numero de motor</string>
    <string name="textvmotor">Velocidad del motor</string>
    <string name="textdmotor">Direccion del motor</string>
    <string name="textpmotor">Pasos del motor</string>
    <string name="enviacmdmotor">Enviar</string>
    <string name="cargarenacto">Cargar en acto</string>
   
    <!-- AJUSTES LUZ -->
    <string name="title_activity_pantalla_luz">PantallaLuz</string>
    <string name="textnluz">Numero de Luz</string>
    <string name="textvluz">Velocidad Luz</string>
    <string name="textdluz">Direccion Luz</string>
    <string name="textpluz">Pasos de la Luz</string>
    <string name="enviacmdluz">Enviar</string>
    
    <!-- Guardar Acto -->
    <string name="ButtonGuardaActo">Guardar Acto</string>

</resources>
