<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.teatro.Main" >

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:onClick="conectarBluetooth"
        android:layout_marginTop="57dp"
        android:text="@string/buttonConnect" />
    
    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonConnect"
        android:layout_centerHorizontal="true"
        android:onClick="ingresaraPantallaA"
        android:layout_marginTop="57dp"
        android:text="@string/buttonIngresar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonConnect"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/buttonConnect"
        android:layout_marginTop="72dp"
        android:text="@string/texto_prueba" />

</RelativeLayout>